Style tweak to prevent FF3.6 layout overflow.

--- a/showcase/code/stylesheets/googlecodeindex.css
+++ b/showcase/code/stylesheets/googlecodeindex.css
@@ -101,7 +101,7 @@
 
 .googlecode-index .search INPUT {
   border-width: 0;
-  width: 27em;
+  width: 26em;
   outline: none;
   color: #000;
   font-size: 1.5em;
